--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     Case Problem 2
 
     The Math Table Calculator
-    Author: 
-    Date:   
+    Author: Gabriel Hernandez
+    Date: 3/25/19
 
     Filename: mt_calc.html
 
@@ -19,6 +19,8 @@
    <title>The Math Table Calculator</title>
    <link href="mt_base.css" rel="stylesheet"  />      
    <link href="mt_styles.css" rel="stylesheet" />
+   <link rel="stylesheet" href="mt_calc.css" />
+   <script src="mt_calc.js" async></script>
   
 </head>
 
